logs/train/600/job.10130712.err

Currently Loaded Modules:
  1) tools/miniconda/python3.8/4.9.2

 

WARNING: overwriting environment variables set in the machine
overwriting variable nnUNet_raw_data_base nnUNet_preprocessed RESULTS_FOLDER OUTPUT
Traceback (most recent call last):
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 33, in <module>
    sys.exit(load_entry_point('nnunet', 'console_scripts', 'nnUNet_train')())
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 25, in importlib_load_entry_point
    return next(matches).load()
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/metadata.py", line 86, in load
    module = import_module(match.group('module'))
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/smaijer/code/nnUNet/nnunet/run/run_training.py", line 24, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2_CascadeFullRes import nnUNetTrainerV2CascadeFullRes
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2_CascadeFullRes.py", line 30, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2 import nnUNetTrainerV2
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2.py", line 127
    else:
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 33, in <module>
    sys.exit(load_entry_point('nnunet', 'console_scripts', 'nnUNet_train')())
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 25, in importlib_load_entry_point
    return next(matches).load()
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/metadata.py", line 86, in load
    module = import_module(match.group('module'))
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/smaijer/code/nnUNet/nnunet/run/run_training.py", line 24, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2_CascadeFullRes import nnUNetTrainerV2CascadeFullRes
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2_CascadeFullRes.py", line 30, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2 import nnUNetTrainerV2
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2.py", line 127
    else:
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 33, in <module>
    sys.exit(load_entry_point('nnunet', 'console_scripts', 'nnUNet_train')())
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 25, in importlib_load_entry_point
    return next(matches).load()
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/metadata.py", line 86, in load
    module = import_module(match.group('module'))
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/smaijer/code/nnUNet/nnunet/run/run_training.py", line 24, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2_CascadeFullRes import nnUNetTrainerV2CascadeFullRes
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2_CascadeFullRes.py", line 30, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2 import nnUNetTrainerV2
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2.py", line 127
    else:
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 33, in <module>
    sys.exit(load_entry_point('nnunet', 'console_scripts', 'nnUNet_train')())
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 25, in importlib_load_entry_point
    return next(matches).load()
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/metadata.py", line 86, in load
    module = import_module(match.group('module'))
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/smaijer/code/nnUNet/nnunet/run/run_training.py", line 24, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2_CascadeFullRes import nnUNetTrainerV2CascadeFullRes
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2_CascadeFullRes.py", line 30, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2 import nnUNetTrainerV2
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2.py", line 127
    else:
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 33, in <module>
    sys.exit(load_entry_point('nnunet', 'console_scripts', 'nnUNet_train')())
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 25, in importlib_load_entry_point
    return next(matches).load()
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/metadata.py", line 86, in load
    module = import_module(match.group('module'))
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/smaijer/code/nnUNet/nnunet/run/run_training.py", line 24, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2_CascadeFullRes import nnUNetTrainerV2CascadeFullRes
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2_CascadeFullRes.py", line 30, in <module>
    from nnunet.training.network_training.nnUNetTrainerV2 import nnUNetTrainerV2
  File "/home/smaijer/code/nnUNet/nnunet/training/network_training/nnUNetTrainerV2.py", line 127
    else:
    ^
SyntaxError: invalid syntax
